# nebo-sdk-c

./: .gitignore  CMakeLists.txt  README.md
examples/calculator/: main.c
include/nebo/: channel.h  comm.h  gateway.h  nebo.h  schedule.h  schema.h  tool.h  types.h  ui.h  view.h
proto/apps/v0/: channel.proto  comm.proto  common.proto  gateway.proto  schedule.proto  tool.proto  ui.proto
src/: grpc_server.cc  internal.h  nebo.c  schema.c  view.c
